vlib/v/checker/tests/comptime_zero_generic_type_mismatch_err.vv
struct Bar[T] {
	val T
}

fn is_zero[T](val T) bool {
	return val == $zero(Bar[T])
}

fn main() {
	assert !is_zero(Bar[int]{42})
}
